--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
     },
     "buildpacks": [
         {
-            "url": "heroku/python"
+            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
         }
     ]
 }
