--- a/app.json
+++ b/app.json
@@ -28,6 +28,9 @@
     "buildpacks": [
         {
             "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+        },
+        {
+            "url": "heroku/python"
         }
     ]
 }
